Moved roll functionality to its own library

--- a/haskell-tick-tack-roll.cabal
+++ b/haskell-tick-tack-roll.cabal
@@ -25,7 +25,7 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Roll
   other-modules:
       Paths_haskell_tick_tack_roll
   hs-source-dirs:
