--- a/haskell-tick-tack-roll.cabal
+++ b/haskell-tick-tack-roll.cabal
@@ -56,6 +56,10 @@ test-suite haskell-tick-tack-roll-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      HUnit
+    , QuickCheck
+    , base >=4.7 && <5
+    , doctest
     , haskell-tick-tack-roll
+    , hspec
   default-language: Haskell2010
