--- a/haskell-tick-tack-roll.cabal
+++ b/haskell-tick-tack-roll.cabal
@@ -7,11 +7,11 @@ cabal-version: 1.12
 name:           haskell-tick-tack-roll
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/haskell-tick-tack-roll#readme>
-homepage:       https://github.com/githubuser/haskell-tick-tack-roll#readme
-bug-reports:    https://github.com/githubuser/haskell-tick-tack-roll/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2022 Author name here
+homepage:       https://github.com/jonask/haskell-tick-tack-roll#readme
+bug-reports:    https://github.com/jonask/haskell-tick-tack-roll/issues
+author:         Jonas Kjærandsen
+maintainer:     jonakj@stud.ntnu.no
+copyright:      2022 Jonas Kjærandsen
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/haskell-tick-tack-roll
+  location: https://github.com/jonask/haskell-tick-tack-roll
 
 library
   exposed-modules:
