--- a/haskell-tick-tack-roll.cabal
+++ b/haskell-tick-tack-roll.cabal
@@ -37,6 +37,8 @@ library
 
 executable haskell-tick-tack-roll-exe
   main-is: Main.hs
+  other-modules:
+      Paths_haskell_tick_tack_roll
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
