--- a/haskell-tick-tack-roll.cabal
+++ b/haskell-tick-tack-roll.cabal
@@ -46,6 +46,7 @@ executable haskell-tick-tack-roll-exe
   build-depends:
       base >=4.7 && <5
     , haskell-tick-tack-roll
+    , random
   default-language: Haskell2010
 
 test-suite haskell-tick-tack-roll-test
